--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "repository": "",
   "dependencies": {
     "express": "~4.8.7",
+    "body-parser": "~1.x",
     "mongoose": "~3.8"
   },
   "devDependencies": {
