Refactored toon resources into route/controller files

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "~4.8.7",
     "body-parser": "~1.x",
-    "mongoose": "~3.8"
+    "mongoose": "~3.8",
+    "lodash": "~2.4"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
