implemented first pass of BDD test suite with mocha and should

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "grunt": "~0.4.5",
-    "karma": "~0.12.22"
+    "karma": "~0.12.22",
+    "should": "4.x"
   }
 }
