--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "tooner",
   "version": "0.0.1",
   "description": "A character builder for the MMO game Shadowbane",
-  "keywords": ["mmo", "gaming", "angular", "node"],
+  "keywords": [
+    "mmo",
+    "gaming",
+    "angular",
+    "node"
+  ],
   "author": "Tom DeHart <tdehart@gmail.com>",
   "license": "MIT",
   "repository": "",
   "dependencies": {
-    "express": "~4.8.7",
     "body-parser": "~1.x",
+    "express": "~4.8.7",
+    "lodash": "~2.4",
     "mongoose": "~3.8",
-    "lodash": "~2.4"
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
