--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,13 @@
 {
   "name": "tooner",
   "version": "0.0.1",
-  "devDependencies": {
+  "devDependencies": {},
+  "dependencies": {
     "angular": "~1.2",
+    "angular-route": "~1.2.23",
+    "angular-resource": "~1.2.23",
+    "angular-animate": "~1.2.23",
     "angular-ui-router": "~0.2",
     "bootstrap": "~3.2"
-  },
-  "dependencies": {}
+  }
 }
