--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
+    "gulp": "^3.8.7",
+    "gulp-livereload": "^2.1.1",
+    "gulp-nodemon": "^1.0.4",
     "karma": "~0.12.22",
     "should": "4.x"
   }
