set up initial client-side test framework

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,9 @@
 {
   "name": "tooner",
   "version": "0.0.1",
-  "devDependencies": {},
+  "devDependencies": {
+    "angular-mocks": "~1.2.23"
+  },
   "dependencies": {
     "angular": "~1.2",
     "angular-route": "~1.2.23",
