--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "gulp-livereload": "^2.1.1",
     "gulp-nodemon": "^1.0.4",
     "karma": "~0.12.22",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-jasmine": "^0.1.5",
+    "protractor": "^1.2.0",
     "should": "4.x"
   }
 }
