--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "devDependencies": {
     "gulp": "^3.8.7",
+    "gulp-karma": "0.0.4",
     "gulp-livereload": "^2.1.1",
+    "gulp-mocha": "^1.0.0",
     "gulp-nodemon": "^1.0.4",
+    "gulp-protractor": "0.0.11",
     "karma": "~0.12.22",
     "karma-chrome-launcher": "^0.1.4",
     "karma-jasmine": "^0.1.5",
