--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-resource": "~1.2.23",
     "angular-animate": "~1.2.23",
     "angular-ui-router": "~0.2",
-    "bootstrap": "~3.2"
+    "bootstrap": "~3.2",
+    "shadowbane-db": "git@github.com:tdehart/shadowbane-db.git"
   }
 }
