--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "~1.x",
     "express": "~4.8.7",
+    "glob": "^4.0.6",
     "lodash": "~2.4",
     "mongoose": "~3.8",
     "swig": "^1.4.2"
